<?php

class Kernel{

    public function __construct(){
    }
}