@startuml class

class Users {
    {static} Auto_increment id
    {static} String name
    {static} String email
    {static} String password
    {static} Boolean token
    {static} Boolean is_registered
    {static} Boolean is_admin
    {static} Datetime created_at
    {static} Datetime updated_at
    {static} Boolean is_deleted
    ---
    getAllUsers()
    findUserById()
    findUserByName()
    findUserByNameOrMail()
    findUserByNameAndToken()
    createNewUser()
    activateUser()
    deleteUser()
    authentificationFailed()
    loggedOnly()
    adminOnly()
}

class Posts {
    {static} Auto_increment id
    {static} String user_id
    {static} String name
    {static} String picture
    {static} String catchphrase
    {static} Text content
    {static} Datetime created_at
    {static} Datetime updated_at
    {static} Boolean is_deleted
    ---
    getAllPosts()
    getLastPosts()
    getPostById()
    createNewPost()
    updatePost()
    addPicture()
    getLastPostId()
    deletePost()
}

class Comments {
    {static} Auto_increment id
    {static} String post_id
    {static} String user_id
    {static} String content
    {static} Boolean is_confirmed
    {static} Datetime created_at
    {static} Datetime updated_at
    {static} Boolean is_deleted
    ---
    getAllCommentsWithUsernames()
    getCommentsByPostsWithUsernames()
    getCommentById()
    getNumberOfNotConfirmedComments()
    createComment()
    confirmAllComments()
    deleteComment()
}

Users "1" - "many" Posts
Users "1" - "many" Comments
Posts "1" -- "many" Comments

class CommentsController {
    ---
    delete()
    confirmAll()
}

class DefaultController {
    ---
    homePage()
    legalMentions()
    e404()
}

class PostsController {
    ---
    posts()
    post()
    newPost()
    editPost()
    delete()
}

class UsersController {
    ---
    loginPage()
    newUser()
    dashboard()
    confirmRegister()
    resetPassword()
    logout()
    delete()
}

class Twig {
    ---
    __construct()
}

class TwigFactory {
    ---
    get()
}

Twig - TwigFactory

class Session {
    ---
    __construct()
    setFlash()
    flash()
}

class Altorouter {
    ---
    __construct()
}

class RouterController {
    ---
    callRoute()
}

Altorouter - RouterController

class Model {
    ---
    __construct()
}

Model - Users
Model - Posts
Model - Comments

class Kernel {
    ---
    __construct()
}

Session - Kernel
RouterController -- Kernel
TwigFactory -- Kernel
Contact - Kernel
Controller - Kernel
Model --- Kernel

class Database {
    ---
    __construct()
    fetchAll()
    fetch()
    create()
    update()
    delete()
    getLastId()
}

Database -- Users
Database -- Posts
Database -- Comments

class Controller {
    ---
    __construct()
}

Controller -- CommentsController
Controller -- DefaultController
Controller -- PostsController
Controller -- UsersController

class Contact {
    ---
    __construct()
    sendContactMail()
    sendRegisterMail()
    _getContactMailBody()
    _getRegisterMailBody()
    _getTranport()
}


@enduml